--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>MEDIA TEST 1 "SIDESCROLLER" 19 APRIL 2017</title>
 
 	<link rel="stylesheet" href="style.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=20000px, initial-scale=1.0">
 
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
